tests/errors/surf_type_09.ki
# type/operator: a Float is not iterable
for x in 3.14:
    discard x
